--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         </h1>
         <ul>
           <li><img src='images/what.jpg' onclick='document.getElementById("what").play()'>What up with that?</li>
-          <li><img src='images/darth.jpg' onclick='document.getElementById("darth").play()'>Darth Vader</li>
+          <li><img src='images/darth.jpg' onclick='document.getElementById("darth").play()'>Darth Vader Nooo!</li>
           <li><img src='images/lambert.jpg' onclick='document.getElementById("lambert").play()'>Lambert</li>
+          <li><img src='images/kangaroo.gif' onclick='document.getElementById("kangaroo").play()'>Air Guitar Kangaroo</li>
         </ul>
       </div>
     </div>
     <audio id="what"><source src="sounds/what.mp3" type="audio/mpeg"></audio>
     <audio id="darth"><source src="sounds/darth.mp3" type="audio/mpeg"></audio>
     <audio id="lambert"><source src="sounds/lambert.m4a" type="audio/mpeg"></audio>
+    <audio id="kangaroo"><source src="sounds/kangaroo.mp3" type="audio/mpeg"></audio>
   </body>
 </html>
